--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@ footer{
 }
 
 @media only screen and (min-width:300px)and (max-width: 767px){
+
+  .container-nav{
+    padding: 10px;
+    width: 100%;
+  }
   /* Nav */
   .hamburger{
     display: block;
