added background image and font

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin:0;
+  font-family: 'Helvetica';
 }
 
 .container{
@@ -17,7 +18,8 @@
 }
 
 main{
- background-color: #f2f2f2;
+  background-image: url('images/background.jpg');
+ 
 }
 
 .nav-menu{
@@ -42,6 +44,7 @@ h4{
   color: #252323;
 }
 p{
+  font-family: 'sans-serif';
   color: #595959;
 }
 
