--- a/style.css
+++ b/style.css
@@ -6,16 +6,20 @@
 }
 
 .container{
-  padding: 10px 20px;
+  padding: 20px 40px;
 }
 
+.grid{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap:3em;
+  text-align: justify;
+}
 .flex{
   display: flex;
-  justify-content: space-evenly;
-  align-content: center;
-  text-align: center;
-  gap: 20px;
-}
+  justify-content: space-between;
+  align-items: center;
+ }
 
 main{
   background-image: url('images/background.jpg');
@@ -32,7 +36,7 @@ main{
 
 .head-center{
   text-align: center;
-  padding: 10px;
+  padding: 20px;
 }
 h2{
 color: #D21C30;
@@ -48,19 +52,13 @@ p{
   color: #595959;
 }
 
-.mt-10{
-  margin-top: 10px;
-}
-
-
-
 /* Nav */
 nav{
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ecf695;
+  background-color: black;
 }
 .container-nav{
   padding: 10px;
@@ -92,7 +90,7 @@ nav ul{
 }
 
 footer{
-  background-color: #ecf695;
+  background-color: black;
 }
 
 @media only screen and (min-width:300px)and (max-width: 767px){
@@ -112,7 +110,7 @@ footer{
     top: 70px;
     gap: 0;
     flex-direction: column;
-    background-color: #ecf695;
+    background-color: black;
     width: 100%;
     text-align: center;
     transition: 0.3s;  
@@ -123,13 +121,17 @@ footer{
  .nav-menu.active{
     left: 0;
   }
-  .flex,.flex-items{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  .hamburger-icon{
+    color:#D21C30;
   }
-  
+   .grid{
+    grid-template-columns:repeat(1,1fr);
+    text-align: justify;
+   }
+   .flex{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
   
 }
