--- a/style.css
+++ b/style.css
@@ -128,11 +128,8 @@ footer{
    .grid{
     grid-template-columns:repeat(1,1fr);
     text-align: justify;
+    grid-row-gap:20px;
    }
-   .flex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-   }
+
   
 }
