--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ nav ul{
 
 footer{
   background-color: black;
+  padding: 10px;
 }
 
 @media only screen and (min-width:300px)and (max-width: 767px){
@@ -112,6 +113,7 @@ footer{
     gap: 0;
     flex-direction: column;
     background-color: black;
+    opacity: 0.8;
     width: 100%;
     text-align: center;
     transition: 0.3s;  
