--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin:0;
   font-family: 'Helvetica';
+  /* background-image: url('images/background.jpg'); */
 }
 
 .container{
@@ -23,7 +24,6 @@
 
 main{
   background-image: url('images/background.jpg');
- 
 }
 
 .nav-menu{
@@ -106,6 +106,9 @@ footer{
     display: block;
     cursor: pointer;
   }
+  .hamburger-icon{
+    color:#D21C30;
+  }
   .nav-menu{
     position: fixed;
     left: -100%;
@@ -124,14 +127,17 @@ footer{
  .nav-menu.active{
     left: 0;
   }
-  .hamburger-icon{
-    color:#D21C30;
-  }
    .grid{
     grid-template-columns:repeat(1,1fr);
     text-align: justify;
     grid-row-gap:20px;
    }
 
-  
+  .image{
+    width: 100%;
+  }
+  .image-banner{
+    width: 100%;
+    object-fit: contain;
+  }
 }
