--- a/style.css
+++ b/style.css
@@ -135,9 +135,12 @@ footer{
 
   .image{
     width: 100%;
+    height: 100%;
+    border: 2px solid red;
   }
   .image-banner{
     width: 100%;
+    height: 100%;
     object-fit: contain;
   }
 }
