--- a/style.css
+++ b/style.css
@@ -133,14 +133,15 @@ footer{
     grid-row-gap:20px;
    }
 
-  .image{
+  /* .image{
     width: 100%;
     height: 100%;
     border: 2px solid red;
-  }
+  } */
   .image-banner{
     width: 100%;
-    height: 100%;
+    max-width: 400px;
+    height: auto;
     object-fit: contain;
   }
 }
