--- a/style.css
+++ b/style.css
@@ -133,11 +133,11 @@ footer{
     grid-row-gap:20px;
    }
 
-  /* .image{
-    width: 100%;
-    height: 100%;
+  .image{
+    /* width: 100%;
+    height: 100%; */
     border: 2px solid red;
-  } */
+  }
   .image-banner{
     width: 100%;
     max-width: 400px;
