--- a/style.css
+++ b/style.css
@@ -89,7 +89,17 @@ nav ul{
   text-decoration: none;
   font-weight: bold;
 }
-
+.image{
+  /* width: 100%;
+  height: 100%; */
+  border: 2px solid red;
+}
+.image-banner{
+  width: 100%;
+  /* max-width: 400px; */
+  height: auto;
+  object-fit: cover;
+}
 footer{
   background-color: black;
   padding: 10px;
@@ -133,15 +143,5 @@ footer{
     grid-row-gap:20px;
    }
 
-  .image{
-    /* width: 100%;
-    height: 100%; */
-    border: 2px solid red;
-  }
-  .image-banner{
-    width: 100%;
-    max-width: 400px;
-    height: auto;
-    object-fit: contain;
-  }
+  
 }
