--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
  }
 
 main{
-  background-image: url('images/background.jpg');
+  /* background-image: url('images/background.jpg'); */
 }
 
 .nav-menu{
