--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
   padding: 0;
   margin:0;
   font-family: 'Helvetica';
-  /* background-image: url('images/background.jpg'); */
 }
 
+
+/* UTILITIES */
 .container{
   padding: 20px 40px;
 }
@@ -21,20 +22,7 @@
   justify-content: space-between;
   align-items: center;
  }
-
-main{
-  /* background-image: url('images/background.jpg'); */
-}
-
-.nav-menu{
-  width: 20%;
-  list-style-type: none;
-  display: flex;
-  justify-content:space-evenly;
-  align-items: center;
-}
-
-.head-center{
+ .head-center{
   text-align: center;
   padding: 20px;
 }
@@ -53,7 +41,21 @@ p{
   color: #595959;
 }
 
-/* Nav */
+
+
+main{
+  background-image: url('images/background.jpg');
+}
+
+/* NAV-BAR */
+.nav-menu{
+  width: 20%;
+  list-style-type: none;
+  display: flex;
+  justify-content:space-evenly;
+  align-items: center;
+}
+
 nav{
   width: 100%;
   display: flex;
@@ -70,39 +72,46 @@ nav{
   justify-content: space-between;
   align-items: center;
 }
-img{
-  width:70px;
-  padding: 5px;
-}
-nav ul{
-  width: 20%;
-  list-style-type: none;
-  justify-self: space-evenly;
-}
-.hamburger{
-  display: none;
-}
-
 .nav-link{
   color: #D21C30;
   list-style-type: none;
   text-decoration: none;
   font-weight: bold;
 }
+nav ul{
+  width: 20%;
+  list-style-type: none;
+  justify-self: space-evenly;
+}
+
+.hamburger{
+  display: none;
+}
+
+
+
+/* IMAGES */
+img{
+  width:70px;
+  padding: 5px;
+}
 .image{
   /* width: 100%;
-  height: 100%; */
-  border: 2px solid red;
+  height: 100%; */  
 }
 .image-banner{
   width: 100%;
   /* max-width: 400px; */
   height: auto;
   object-fit: cover;
+  padding: 0;
 }
 footer{
   background-color: black;
   padding: 10px;
+}
+.fa-brands,.fa-regular{
+  color:#D21C30 ;
 }
 
 @media only screen and (min-width:300px)and (max-width: 767px){
