--- a/style.css
+++ b/style.css
@@ -96,10 +96,6 @@ img{
   width:70px;
   padding: 5px;
 }
-.image{
-  /* width: 100%;
-  height: 100%; */  
-}
 .image-banner{
   width: 100%;
   /* max-width: 400px; */
@@ -136,9 +132,15 @@ footer ul{
     display: block;
     cursor: pointer;
   }
-  .hamburger-icon,.menu{
-    color:#D21C30;
-    padding-left: 5px;
+  .menu,.material-symbols-outlined{
+    color:#C0D339;
+    width: 50px;
+  
+  }
+  .menu-div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   .nav-menu{
     position: fixed;
